e2e/fixtures/gateway/xforwardedprefix/nested.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gateway-x-forwarded-prefix-nested-test-rewrite
  namespace: default
spec:
  replacePathRegex:
    regex: "/(.*)"
    replacement: "/$1"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-x-forwarded-prefix-nested-test
  namespace: default
spec:
  parentRefs:
    - name: traefik
  hostnames:
    - x-forwarded-prefix-nested-test.gateway.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: gateway-x-forwarded-prefix-nested-test-rewrite
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Prefix
                value: /api/v1
      backendRefs:
        - name: backend
          port: 80
