e2e/fixtures/gateway/xforwardedprefix/no-annot.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-x-forwarded-prefix-no-annot-test
  namespace: default
spec:
  parentRefs:
    - name: traefik
  hostnames:
    - x-forwarded-prefix-no-annot-test.gateway.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 80
